Preventing the ball from being overflow to right and bottom

--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body {
 
 }
 
-
+/* preventing the ball from being overflow to right and bottom */
+.frame {
+    position: relative;
+    overflow: hidden;
+}
 
 ::selection {
     color: rgb(3, 87, 7);
